--- a/Style.css
+++ b/Style.css
@@ -2,6 +2,17 @@ body {
     background-color: azure;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+label {
+    font-family: 'Dosis', sans-serif;
+}
+
 
 /*header {
     background-color: gainsboro;
@@ -40,9 +51,14 @@ footer {
 #codigo1 {
     width: 100%;
     height: 100%;
+    color: rgb(0, 180, 180);
     background-color: transparent;
     font-size: 20px;
     border-color: transparent;
+    resize: none;
+    /* Evitar que el textarea cambie de tamaño */
+    outline: none;
+    /* Evitar el resaltado del borde al estar seleccionado */
 }
 
 #caja_text {
@@ -138,4 +154,22 @@ footer {
 
 #busqueda {
     margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1530px) {
+    footer {
+        position: relative;
+        margin-top: 100px;
+        background-color: #979595;
+        color: #fff;
+        text-align: center;
+        padding: 50px;
+        width: 100%;
+    }
+}
+
+@media screen and (min-width: 0px) {
+    main {
+        text-align: center;
+    }
 }
